--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,8 +4,14 @@
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="css/minta.css">
     </head>
     <body>
-        <div>TODO write content</div>
+        <div class="kerdesek">
+            <div class="valasz" id="elso">Alma</div>
+            <div class="valasz" id="masodik">Banán</div>
+            <div class="valasz" id="harmadik">Citrom</div>
+            <div class="valasz" id="negyedik">Dinnye</div>
+        </div>
     </body>
 </html>
