--- a/public_html/index.html
+++ b/public_html/index.html
@@ -7,7 +7,8 @@
         <link rel="stylesheet" type="text/css" href="css/minta.css">
     </head>
     <body>
-        <div class="kerdesek">
+        <div class="valaszok">
+                    <div id="kerdes"><p>Hello</p></div>
             <div class="valasz" id="elso">Alma</div>
             <div class="valasz" id="masodik">Banán</div>
             <div class="valasz" id="harmadik">Citrom</div>
