--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Legyen Ön is Milliomos!</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="css/minta.css">
+        <script type="text/javascript" src="js/script.js"></script>
+        <link rel="icon" href="./favicon.jpg">
     </head>
-    <body>
-        <div>TODO write content</div>
+    <body onload="init();">
+        <div id="main">
+            <div id="nyeremeny">
+                <div id="nyeremenyBlokk"></div>
+            </div>
+            <div class="valaszok">
+                <div id="kerdes"><p>Hello</p></div>
+                <div class="valasz" id="elso" onclick="ellenorzes('elso');"><p>Alma</p></div>
+                <div class="valasz" id="masodik" onclick="ellenorzes('masodik');"><p>Banán</p></div>
+                <div class="valasz" id="harmadik" onclick="ellenorzes('harmadik');"><p>Citrom</p></div>
+                <div class="valasz" id="negyedik" onclick="ellenorzes('negyedik');"><p>Dinnye</p></div>
+            </div>
+            <div id="helyzet">
+                <div id="helyzetBlokk"></div>
+            </div>
+            <div style="clear: both; display: block;"></div>
+        </div>
+
     </body>
 </html>
