Jobb oldal, újra

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Legyen Ön is Milliomos!</title>
+        <title>Legyen Ön is Milliárdos!</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/minta.css">
@@ -13,7 +13,7 @@
             <div id="nyeremeny">
                 <div id="nyeremenyBlokk"></div>
             </div>
-            <div class="valaszok">
+            <div id="valaszok">
                 <div id="kerdes"><p>Hello</p></div>
                 <div class="valasz" id="elso" onclick="ellenorzes('elso');"><p>Alma</p></div>
                 <div class="valasz" id="masodik" onclick="ellenorzes('masodik');"><p>Banán</p></div>
@@ -21,10 +21,10 @@
                 <div class="valasz" id="negyedik" onclick="ellenorzes('negyedik');"><p>Dinnye</p></div>
             </div>
             <div id="helyzet">
-                <div id="helyzetBlokk"></div>
+                <div id="helyzetBlokk">
+                </div>
+                <div style="clear: both; display: block;"></div>
             </div>
-            <div style="clear: both; display: block;"></div>
-        </div>
 
     </body>
 </html>
