--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,6 +10,7 @@
     </head>
     <body onload="init();">
         <div id="main">
+            <div id="eltolo"></div>
             <div id="nyeremeny">
                 <div id="nyeremenyBlokk"></div>
             </div>
@@ -25,6 +26,6 @@
                 </div>
                 <div style="clear: both; display: block;"></div>
             </div>
-
+        </div>
     </body>
 </html>
